--- a/privacy/index.html
+++ b/privacy/index.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,9 +8,9 @@
   <link rel="icon" href="{% static 'insget/favicon.png' %}">
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="{% static 'light.css' %}">
-  <link rel="stylesheet" href="{% static 'custom.css' %}">
-  <link rel="stylesheet" href="{% static 'dark.css' %}" media="(prefers-color-scheme: dark)">
+  <link rel="stylesheet" href="../css/light.css">
+  <link rel="stylesheet" href="../css/custom.css">
+  <link rel="stylesheet" href="../css/dark.css" media="(prefers-color-scheme: dark)">
 </head>
 
 <body class="ready sticky">
@@ -31,8 +30,6 @@
     <p>InsGet does not explicitly use cookie technology. However, third party code or web pages that we use may collect cookies to improve their services, and you can choose whether to accept or reject these cookies and know when they are sent to your device.</p>
     <p><strong>Changes to this Privacy Policy</strong></p>
     <p>We may update our privacy policy from time to time. Therefore, we recommend that you check this page periodically for updates. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately upon posting on this page.</p>
-    <p><strong>Contact Us</strong></p>
-    <p>If you have any questions or suggestions about our privacy policy, please feel free to contact us at <a href="mailto:insget@hotmail.com">insget@hotmail.com</a> Get in touch with us.</p>
   </article>
   </main>
 </body>
